Time: 2 ms (83.69%), Space: 44.6 MB (64.33%) - LeetHub